package dev.kaldiroglu.dp.creational.ch02.factoryMethod.solution.company.fm1;

public interface Factory {
	
	public Employee create();

}
